# sceptre-resolver-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.circleci/: config.yml
.github/workflows/: release.yaml  tests.yaml
resolver/: custom.py  resolver.py
tests/: test_custom.py  test_resolver.py
